# FranksVelodyneAlgos

./: .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER.txt  HOWTO.txt  README.md  makeAll.sh
exampleData/DurlacherTor/: img.cfg  imu.cfg
exampleData/MuehlburgerTor/velodyne_dist/: timestamps.txt  timestamps_end.txt  timestamps_start.txt  velodyne_config.txt
libGeneralUtils/: CMakeLists.txt  ClassLabel.cpp  ClassLabel.hpp  ClassLabelHistogram.cpp  ClassLabelHistogram.hpp  Classifier.cpp  Classifier.hpp  CovarEllipsoidRendering.hpp  CsvReader.cpp  CsvReader.hpp  EnumCreation.hpp  FMUtils.cpp  FMUtils.hpp  FeatureMaxRangeNormalizer.cpp  FeatureMaxRangeNormalizer.hpp  FeatureNormalizer.hpp  FeatureSet.cpp  FeatureSet.hpp  FeatureVector.cpp  FeatureVector.hpp  FeatureVector.tcc  GridND.cpp  GridND.hpp  GridND.tcc  HomogeneousTransformationMatrix.hpp  MatrixDefs.hpp  NormalSampler.cpp  NormalSampler.hpp  ParamStructCreation.hpp  PrincipalComponentAnalysis.cpp  PrincipalComponentAnalysis.hpp  SvmClassifier.cpp  SvmClassifier.hpp  Tag.hpp  TagClassificationResult.hpp  TagInvalidEntries.hpp  TagTrueClassLabel.hpp  TimeVal.cpp  TimeVal.hpp  Timer.hpp  (+8 more)
libGeneralUtils/boost/numeric/bindings/lapack/: gesdd.hpp  hpsv.hpp  trexc.hpp
libGeneralUtils/cvmlib/: CVM.html
libGeneralUtils/cvmlib/include/: cvm.h
libGeneralUtils/kdtree2/: gitsource.txt
libGeneralUtils/kdtree2/src-c++/: kdtree2_test.cpp
libGeneralUtils/libsvm/: svm.cpp  svm.h
libGui3DQt/: README
libRangedataUtils/: CMakeLists.txt  LidarImage.hpp  LidarImageFeatures.cpp  LidarImageFeatures.hpp  LidarImageProjector.cpp  LidarImageProjector.hpp  LidarImageProjectorPNG.cpp  LidarImageProjectorPNG.hpp  LidarImageVisualization.cpp  LidarImageVisualization.hpp  LidarSegment.cpp  LidarSegment.hpp  PngDistanceImage.hpp  libRangedataUtils.pro
libTrackingUtils/: AlgoFrameFeatures.cpp  AlgoFrameFeatures.hpp  AlgoRegistration.cpp  AlgoRegistration.hpp  AlgoSegmentation.cpp  AlgoSegmentation.hpp  AlgoTrackGeneration.cpp  AlgoTrackGeneration.hpp  AlgoVisualization.cpp  AlgoVisualization.hpp  CMakeLists.txt  ICP.cpp  ICP.hpp  ICPBesl.hpp  ICPBesl.tcc  ICPChen.hpp  ICPChen.tcc  ICPLinearized.hpp  ICPLinearized.tcc  ICPPlanePlane.hpp  ICPPlanePlane.tcc  ICPSwitch.hpp  ICPSwitch.tcc  KalmanFilter.cpp  KalmanFilter.hpp  LidarFrame.cpp  LidarFrame.hpp  LidarFrameBuffer.cpp  LidarFrameBuffer.hpp  ObstacleTracking.cpp  ObstacleTracking.hpp  ParameterHeap.cpp  ParameterHeap.hpp  PointCloudTrack.cpp  PointCloudTrack.hpp  TrackingUtils.cpp  TrackingUtils.hpp  VisualizerObstacleTracking.cpp  VisualizerObstacleTracking.hpp  VisualizerObstacleTracking.ui  (+1 more)
mapper/: .gitignore  CMakeLists.txt  DatasetReader.hpp  DatasetReaderVeloslam.cpp  DatasetReaderVeloslam.hpp  DatasetReaderVelotracking.cpp  DatasetReaderVelotracking.hpp  Frame.cpp  Frame.hpp  Map.cpp  Map.hpp  Mapper.cpp  Mapper.hpp  Mapper.pro  Surface.hpp  Visualizer3DMapper.cpp  Visualizer3DMapper.hpp  Visualizer3DMapper.ui  main.cpp
tools/kitti_converters/: CMakeLists.txt  convertKittiOdometry.sh  convertKittiRawToMapping.sh  convertKittiTrackingToMapping.sh  convertVelodyne.cpp  imuheader4mapping.txt
tracker/: .gitignore  71_42_stage1_classifier  71_42_stage1_classifier.svmmodel  71_42_stage1_hyperplane.txt  71_42_stage2_hyperplane.txt  95_18_stage1_classifier  95_18_stage1_classifier.svmmodel  95_18_stage2_hyperplane.txt  CMakeLists.txt  ICPTestSetting.txt  PNGReader.cpp  PNGReader.hpp  Tracker.pro  VisualizerPNGReader.cpp  VisualizerPNGReader.hpp  VisualizerPNGReader.ui  main.cpp  stage1_classifier  stage1_classifier.svmmodel  stage1_hyperplane.txt  stage2_hyperplane.txt
visPointCloud/: .gitignore  CMakeLists.txt  ConsoleProgressBar.cpp  ConsoleProgressBar.hpp  VisPointcloud.pro  Visualizer3DMap.cpp  Visualizer3DMap.hpp  Visualizer3DMap.ui  main.cpp
visTracks/: .gitignore  CMakeLists.txt  FrameData.cpp  FrameData.hpp  TrackData.cpp  TrackData.hpp  VisTracks.pro  VisualizerTracks.cpp  VisualizerTracks.hpp  VisualizerTracks.ui  genAllBoundingBoxes.sh  genAllScreenshots.sh  genBoundingBoxes.sh  main.cpp  xtractBoundingBoxes.py  xtractTrackTraces.sh
